Fix spacing of intro text

--- a/web/src/scss/footer.scss
+++ b/web/src/scss/footer.scss
@@ -3,6 +3,6 @@
 
 footer {
   height: 30rem;
-  background: c.$lightgrey;
+  background: c.$darkheading;
   margin-top: 23rem;
 }
