--- a/web/src/scss/foundation/_base.scss
+++ b/web/src/scss/foundation/_base.scss
@@ -30,8 +30,8 @@ body {
   background: c.$bg;
   color: c.$text;
   overflow-x: hidden;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  // -webkit-font-smoothing: antialiased;
+  // -moz-osx-font-smoothing: grayscale;
 }
 
 main,
@@ -41,27 +41,24 @@ footer {
 }
 
 h1 {
-  font-family: "Brandon Grotesque", sans-serif;
   font-size: 5em;
   font-weight: 800;
   text-transform: uppercase;
-  color: c.$primary;
+  color: c.$darkheading;
   margin: 0;
   line-height: 1;
 }
 
 h2 {
-  font-family: "Brandon Grotesque", sans-serif;
   font-size: 5.4em;
   font-weight: 800;
   text-transform: uppercase;
-  color: c.$primary;
+  color: c.$darkheading;
   margin: 0;
   line-height: 1.3;
 }
 
 h3 {
-  font-family: "Brandon Grotesque", sans-serif;
   font-size: 2.5em;
   font-weight: 300;
   color: c.$bg;
@@ -72,14 +69,14 @@ h3 {
 h4 {
   font-size: 4em;
   font-weight: 700;
-  color: c.$primary;
+  color: c.$darkheading;
   margin: 0 0 2.2rem;
   line-height: 1;
 }
 
 p {
-  font-size: 2.15em;
-  line-height: 1.49;
+  font-size: 2.4em;
+  line-height: 1.47;
 }
 
 a {
@@ -93,7 +90,7 @@ a {
 
 .container {
   position: relative;
-  max-width: 85rem;
+  max-width: 90rem;
   margin: auto;
   z-index: 3;
 }
@@ -105,7 +102,7 @@ a {
 .introduction {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  gap: 6.5rem;
+  gap: 9.4rem;
   padding-bottom: 6rem;
 }
 
