--- a/web/src/scss/header.scss
+++ b/web/src/scss/header.scss
@@ -28,7 +28,7 @@ header {
   right: 4.8rem;
   top: 4.8rem;
   z-index: 3;
-  background: rgba(c.$lightgrey, 0.8);
+  background: rgba(c.$lightgrey, 0.5);
   padding: 0.9rem 0.7rem 0.5rem 0.7rem;
   border-radius: 50%;
 }
@@ -116,24 +116,26 @@ header {
   top: calc(4.8rem - 104vw);
   clip-path: circle(0% at 50% 50%);
   transition: clip-path 1s ease-out;
-  text-align: right;
+  text-align: left;
   ul {
     position: absolute;
-    top: calc(50% - 3rem);
-    left: calc(50% - 23rem);
+    top: calc(50% - 2.3rem);
+    right: calc(50% - 25.5rem);
     font-size: 2.15rem;
-    font-weight: 700;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
     list-style: none;
     padding: 0 4rem;
     li {
       padding: 0.35rem 0;
       a {
         color: c.$lightheading;
-        border-bottom: 0.3rem solid rgba(c.$lightheading, 0);
+        border-bottom: 0.13em solid rgba(c.$lightheading, 0);
         transition: border-bottom 0.5s ease-in-out;
       }
       a:hover {
-        border-bottom: 0.3rem solid rgba(c.$lightheading, 1);
+        border-bottom: 0.13em solid rgba(c.$lightheading, 1);
         transition: border-bottom 0.5s ease-in-out;
       }
     }
@@ -151,4 +153,5 @@ header {
   width: 89%;
   margin: auto;
   text-align: right;
+  margin-bottom: 5rem;
 }
