--- a/web/src/scss/index.scss
+++ b/web/src/scss/index.scss
@@ -3,7 +3,7 @@
 
 .brand {
   font-family: "Halis";
-  font-size: 8.5rem;
+  font-size: 8rem;
   font-weight: 500;
   line-height: 0.96;
 }
@@ -19,7 +19,7 @@
 
 .introText {
   position: relative;
-  padding-top: 13rem;
+  padding-top: 6.9rem;
 }
 
 .sideImageContainer {
